tests/fails/f22.t
if not require("fail") then return end

terra foo()
    (3) = 4
end
foo()
